<resources>
    <string name="app_name">Cheeto</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="edit_recognized_text">Edit recognized text</string>
    <string name="save">Save</string>
    <string name="open_camera">Open Camera</string>
    <string name="choose_json">Choose JSON</string>
    <string name="solve_board">Solve Board</string>
    <string name="enter_number">Enter number</string>
    <string name="please_enter_number">Please enter a number</string>
    <string name="not_found">Not found!</string>
    <string name="list_combinations">List Combinations</string>
</resources>