<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/openCameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_camera" />

        <Button
            android:id="@+id/chooseJsonButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_json" />

        <EditText
            android:id="@+id/numberInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_number"
            android:importantForAutofill="no"
            android:inputType="numberSigned" />

        <Button
            android:id="@+id/solveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solve_board" />

        <Button
            android:id="@+id/listCombinations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_combinations" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="16dp" />

    </LinearLayout>
</ScrollView>